--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/less_emphasized">
+        android:background="@color/prim300">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -27,6 +27,7 @@
                 android:paddingLeft="30dp"
                 android:paddingTop="30dp"
                 android:background="?android:attr/selectableItemBackground"
+                android:textColor="@android:color/white"
                 />
 
             <TextView
@@ -35,7 +36,7 @@
                 android:text="Last checked:"
                 android:paddingTop="5dp"
                 android:paddingLeft="30dp"
-                android:textColor="@color/less_emphasized"/>
+                android:textColor="@color/light_grey"/>
 
             <TextView
                 android:id="@+id/last_checked"
@@ -43,14 +44,18 @@
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:paddingLeft="30dp"
-                android:paddingBottom="30dp" />
+                android:paddingBottom="30dp"
+                android:text="Never"
+                android:textColor="#EEEEEE"/>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
 
             <Button
                 android:id="@+id/checkInIcon"
@@ -58,6 +63,10 @@
                 android:layout_height="wrap_content"
                 android:text="CheckNow"
                 android:textSize="18sp"
+                android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                style="@style/custom_button"
+
                 android:layout_gravity="center|center_vertical" />
 
             <Button
@@ -65,6 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Check old date"
+                style="@style/custom_button"
                 android:layout_gravity="center|center_vertical" />
 
 
@@ -85,7 +95,7 @@
         android:id="@+id/event_id_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/light_grey"
+        android:background="@color/prim50"
         android:layout_below="@+id/main_event_details">
     </ListView>
 
