--- a/app/src/main/res/drawable-v21/primary_round.xml
+++ b/app/src/main/res/drawable-v21/primary_round.xml
@@ -2,9 +2,13 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@color/prim600">
     <item>
-        <shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <corners android:radius="1dp" />
             <solid android:color="@color/colorPrimary" />
+            <padding android:left="6dp"
+                android:right="6dp"
+                android:top="6dp"
+                android:bottom="6dp"/>
         </shape>
     </item>
 </ripple>
