--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -61,19 +61,16 @@
                 android:id="@+id/checkInIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CheckNow"
+                android:text="CheckIn"
                 android:textSize="18sp"
-                android:paddingLeft="6dp"
-                android:paddingRight="6dp"
                 style="@style/custom_button"
-
                 android:layout_gravity="center|center_vertical" />
 
             <Button
                 android:id="@+id/checkInOlderDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Check old date"
+                android:text="CheckIn old date"
                 style="@style/custom_button"
                 android:layout_gravity="center|center_vertical" />
 
