--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -7,7 +7,7 @@
     </style>
 
     <!-- Custom Button Style -->
-    <style name="custom_button" parent="Widget.AppCompat.Button">
+    <!--<style name="custom_button" parent="Widget.AppCompat.Button">
         <item name="android:textColor">@android:color/white</item>
         <item name="android:padding">0dp</item>
         <item name="android:minWidth">88dp</item>
@@ -16,5 +16,5 @@
         <item name="android:elevation">1dp</item>
         <item name="android:translationZ">1dp</item>
         <item name="android:background">@drawable/primary_round</item>
-    </style>
+    </style>-->
 </resources>
